--- a/index.html
+++ b/index.html
@@ -268,6 +268,14 @@
         </div>
         <button disabled id="form-btn">Registrar</button>
     </form>
+    <footer class="footer">
+        <p>
+            Creado por 
+            <a href="https://github.com/PabloGSA" target="_blank" rel="noopener noreferrer" class="github-link">
+                Pablo Sanchez
+            </a>
+        </p>
+    </footer>
     <script src="index.js"></script>
 </body>
 
